@@ -65,15 +65,12 @@ GW.AddForProfiling("auras", "getBuffs", getBuffs)
 
 local function getDebuffs(unit, filter, revert)
     local debuffList = {}
-    local showImportant = false
+    local showImportant = filter == "IMPORTANT"
     local counter = 0
-    if filter == "IMPORTANT" then
-        filter = nil
-        showImportant = true
-    end
+    local filterToUse = filter == "IMPORTANT" and nil or filter
 
     for i = 1, 40 do
-        if UnitDebuff(unit, i, filter) and ((showImportant and (select(7, UnitDebuff(unit, i, filter)) == "player" or GW.ImportendRaidDebuff[select(10, UnitDebuff(unit, i, filter))])) or not showImportant) then
+        if UnitDebuff(unit, i, filterToUse) and ((showImportant and (select(7, UnitDebuff(unit, i, filterToUse)) == "player" or GW.ImportendRaidDebuff[select(10, UnitDebuff(unit, i, filterToUse))])) or not showImportant) then
             counter = #debuffList + 1
             debuffList[counter] = {}
             local dbi = debuffList[counter]
@@ -319,7 +316,7 @@ local function auraFrame_OnEnter(self)
 end
 GW.AddForProfiling("unitframes", "auraFrame_OnEnter", auraFrame_OnEnter)
 
-local function auraFrame_OnClick(self, button, down)
+local function auraFrame_OnClick(self, button)
     if not InCombatLockdown() and self.auraType == "buff" and button == "RightButton" and self.unit == "player" then
         CancelUnitBuff("player", self.auraid)
     end
